(library
 (name mirage_block_xen_back)
 (public_name mirage-block-xen.back)
 (modules Blkback Block_request)
 (libraries logs lwt cstruct io-page shared-memory-ring
   shared-memory-ring-lwt mirage-block-xen xen-evtchn xenstore
   xenstore.client mirage-block-lwt rresult mirage-xen)
 (wrapped false))
